# models/Item.go
@@ -6,11 +6,12 @@ import (
 )
 
 type Item struct {
-	ItemID        string `gorm:"primaryKey;type:varchar(255)" json:"itemId"`
-	ParticipantID string `gorm:"type:varchar(255)" json:"participantId"`
-	BillID        string `gorm:"type:varchar(255)" json:"billId"`
-	Name          string `gorm:"type:varchar(255)" json:"name"`
-	Price         int    `gorm:"type:int(10)" json:"price"`
+	ItemID        string  `gorm:"primaryKey;type:varchar(255)" json:"itemId"`
+	ParticipantID *string `gorm:"type:varchar(255);default:null" json:"participantId"`
+	BillID        string  `gorm:"type:varchar(255)" json:"billId"`
+	Name          string  `gorm:"type:varchar(255)" json:"name"`
+	Quantity      int     `gorm:"type:int(10)" json:"quantity"`
+	Price         int     `gorm:"type:int(10)" json:"price"`
 }
 
 func (i *Item) BeforeCreate(tx *gorm.DB) (err error) {
